# shadow-fuzzer

./: .env.example  .gitignore  .mcp.json  Anchor.toml  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.superstack/: build-context.md
programs/vulnerable-vault/: Cargo.toml
programs/vulnerable-vault/src/: error.rs  lib.rs  state.rs
programs/vulnerable-vault/src/instructions/: delegate_vault.rs  deposit.rs  initialize_vault.rs  mod.rs  open_position.rs  undelegate_for_fuzz.rs  withdraw.rs
public/: index.html
scripts/: run-demo.sh
tests/: brain.spec.ts  setup.ts  vault.spec.ts
