[package]
name = "vulnerable-vault"
version = "0.1.0"
description = "Deliberately vulnerable SPL vault — Shadow Fuzzer demo target. DO NOT DEPLOY TO MAINNET."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Public-ER delegation only at this step. Access-control/private features
# come in a follow-up sub-step (would add `access-control` to features and
# pull in PermissionProgram CPIs).
ephemeral-rollups-sdk = { version = "0.11.1", features = ["anchor"] }
